--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -1,3 +1,375 @@
+@media screen and (max-width: 1920px) 
+   .container
+      max-width: 100% 
+      padding: 0 60px
+   .lay__box
+      justify-content: space-between
+   .lay__info
+      width: 57.45%
+   .local__box
+      justify-content: center
+   .local__content
+      margin-left: 50px
+   .tabs__nav
+      max-width: 1320px
+      margin-left: auto
+      margin-right: auto
+   .tabs__nav a
+      text-align: center
+   .info__content
+      max-width: 53%
+   .info__area
+      max-width: 40.5%
+   .info__row
+      max-width: 700px
+   .pay .tabs__nav
+      margin-left: 0
+      margin-right: 0
+   .pay__content
+      max-width: 39%
+   .contacts__box
+      justify-content: center
+   .contacts__content
+      margin-top: 30px
+      margin-left: 50px
+   .contacts h2
+      font-size: 100px
+      margin-bottom: 68px
+   .contacts__bg 
+      right: 50%
+      top: 252px
+      z-index: 0
+      margin-right: -600px
+   .news-form__wrap
+      max-width: 32%
+   .policy__content
+      max-width: 64%
+   .calc__content
+      max-width: 32.2%
+   .calc__area
+      max-width: 57.4%
+   .footer__content
+      max-width: 44.8%
+   .footer__form
+      max-width: 21.2%
+@media screen and (max-width: 1920px) and (min-width: 1600px)
+   .header__wrap
+      padding: 400px 0 100px
+   .nav__list li a
+      font-size: 18px
+   .header progress
+      bottom: 181px
+   .nav__tel
+      font-size: 18px
+   .main .swiper1 .swiper-slide a p
+      font-size: 26px
+   h2 
+      font-size: 68px
+   .lay__content
+      max-width: 36%
+   .lay .tabs__nav_1
+      width: 36%
+   .local__text, .local__per, .local__way
+      font-size: 18px
+      line-height: 26px
+   .pay__num
+      font-size: 50px
+   .local__item .pay__per
+      font-size: 18px
+   .local__content
+      max-width: 44%
+      margin-left: 0
+   .local__area
+      max-width: 983px
+      height: 950px
+   .local__box
+      justify-content: space-between
+   .local__logo 
+      top: 51px
+      left: 334px
+      width: 100px
+   .local__block
+      height: 35px
+      padding: 0 16px
+   .local__block p
+      font-size: 16px
+   .local__block span
+      font-size: 16px
+   .local__block_1 
+      top: 265px
+      left: 397px
+   .local__block_2
+      left: 120px
+   .local__block_3 
+      bottom: 45px
+      right: 213px
+   .info__item p
+      font-size: 18px
+      line-height: 26px
+   .info .swiper9 .swiper-slide
+      height: 600px
+   .info__fig 
+      right: -52px
+      top: -285px
+      width: 1800px
+   .info__content h2
+      margin-bottom: 35px
+   .info__text
+      margin-bottom: 95px
+      line-height: 31px
+      font-size: 20px
+   .area__block, .lay__text, .pay__name, .pay__area span, .pay__per, .news-form__text
+      font-size: 18px
+      line-height: 26px
+   .news-form__text
+      max-width: 610px
+   .pay__text, .pay__area p, .news__item span
+      font-size: 16px
+      line-height: 19px
+   .lay__info
+      height: 568px
+   .pay__fig 
+      top: 85px
+      left: 0
+      width: 1000px
+   .pay .tabs__nav
+      width: 39%
+   .pay__btn
+      font-size: 18px
+      height: 55px
+      width: 100%
+      p 
+         font-size: 18px !important
+   .pay 
+      .pay__fig
+         top: -30px
+   .pay__wrap
+      height: 676px
+   .pay__pic
+      height: 661px
+   .news-form__title
+      font-size: 45px
+      line-height: 50px
+   .news__form input
+      font-size: 18px
+   .news__form .custom-checkbox + label
+      font-size: 16px
+   .news__form .footer__policy
+      font-size: 14px
+      line-height: 16px
+   .news__form button
+      width: 100%
+      height: 55px
+   .btn p 
+      font-size: 18px !important
+   .news-form__wrap 
+      max-width: 34%
+      padding: 56px 35px 54px
+   .news__item h3
+      font-size: 22px
+   .news__item p
+      font-size: 19px
+      line-height: 22px
+   .news__item img
+      height: 320px
+   .news__btn div
+      font-size: 18px
+   .news__btn
+      width: 240px
+      height: 60px
+      padding-left: 41px
+   .contacts__box
+      justify-content: space-between
+   .contacts h2
+      font-size: 110px
+      margin-bottom: 95px
+   .contacts__item span, .contacts__item p, .contacts__item a
+      font-size: 18px
+      line-height: 20px
+   .contacts__content
+      max-width: 46%
+      margin-top: 37px
+   .contacts__box img
+      max-width: 48%
+      height: 650px
+   .contacts__row_1
+      margin-bottom: 330px
+   .contacts__bg 
+      right: 50%
+      top: 298px
+      z-index: 0
+      margin-right: -740px
+      width: 576px
+   .footer__info p, .footer__info a, .footer__com p
+      font-size: 16px
+      line-height: 18px
+   .footer__name
+      font-size: 22px
+   .footer__item ul li a
+      font-size: 18px
+   .footer__el span, .footer__el a, .footer__el p, .footer__form form input
+      font-size: 18px
+      line-height: 20px
+   .footer__policy
+      font-size: 14px
+      line-height: 18px
+   .footer__left
+      max-width: 17%
+   .footer__com img 
+      width: 95px
+   .footer__logo
+      width: 180px
+   .footer__form
+      max-width: 25%
+   .footer__content
+      max-width: 45.8%
+   .popup 
+      width: 34%
+      height: 413px
+      z-index: 20
+      .pop__fig
+         top: -41px
+         width: 100%
+   .policy__name
+      font-size: 28px
+      line-height: 30px
+   .policy__text
+      font-size: 19px
+      line-height: 28px
+   .policy h1
+      font-size: 46px
+      margin-bottom: 50px
+   .policy__nav li a
+      font-size: 20px
+      line-height: 25px
+   .policy__content
+      max-width: 67%
+   .cont__btn 
+      width: 262px
+      height: 52px
+   .cont #map
+      width: 50%
+      height: 609px
+   .cont 
+      .contacts__content
+         margin-top: 0
+   .cont h1
+      font-size: 115px
+   .layouts 
+      .lay__btn
+         width: 204px
+      .pay__fig
+         top: -24px
+   .lay__el p
+      font-size: 18px
+   .lay__el span
+      font-size: 66px
+   .layouts .lay__row
+      margin-top: 18px
+   .layouts-item__num, .layouts-item__sum
+      font-size: 26px
+      line-height: 28px
+   .layouts-item__text
+      font-size: 16px
+      line-height: 18px
+   .layouts-item__content p
+      font-size: 16px
+      line-height: 20px
+   .lay-pay__item p
+      font-size: 18px
+      line-height: 21px
+   .layouts-item .lay__btn 
+      width: 322px
+   .nature-lay__item span
+      font-size: 22px
+      line-height: 24px
+   .nature-lay__item p, .another .layouts-item__sum, .another__per p, .calc__block span, .calc__top span, .calc__text span
+      font-size: 18px
+      line-height: 21px
+   .lay-pay__item h3
+      font-size: 20px
+      line-height: 22px
+   .another .layouts-item__num 
+      font-size: 22px
+      line-height: 24px
+   .another__block span, .another__block p, .another__link, .pay__one, .calc__text p
+      font-size: 16px
+      line-height: 18px
+   .another__row
+      margin-top: 10px
+      margin: 10px auto 0
+   .another__area
+      margin: auto auto 0
+   .another__info
+      width: 216px
+   .another__pic
+      height: 300px
+      top: 98px
+   .another__item
+      height: 476px
+   .another__per h3
+      font-size: 26px
+      line-height: 28px
+   .lay-pay .pay__content
+      padding: 61px 32px
+   .lay-pay .pay__content
+      max-width: 49%
+   .lay-pay__item
+      height: 176px
+      padding: 50px 32px
+   .lay-pay__item img
+      margin-top: -79px
+   .calc__name, .calc__info p:nth-child(2)
+      font-size: 14px
+      line-height: 16px
+   .calc__info p:first-child
+      font-size: 18px
+      line-height: 20px
+   .calc__btn
+      height: 57px
+   .calc__block p
+      font-size: 34px
+      line-height: 38px
+   .calc__content 
+      max-width: 34.2%
+   .lay-pay #tab3 .lay-pay__pic
+      max-width: 49.4%
+   .pay__title
+      font-size: 26px
+      line-height: 28px
+   .lay-pay #tab3 .pay__content
+      max-width: 49%
+   .calc__per img
+      width: 430px
+      top: -11px
+   .calc__top p
+      font-size: 34px
+      line-height: 38px
+   .calc__per
+      min-height: 427px
+   .lay__btn
+      width: 204px
+@media screen and (max-width: 1600px) and (min-width: 1500px)
+   .local__content
+      max-width: 700px
+   .lay .pay__fig
+      top: 129px
+   .contacts__box
+      justify-content: space-between
+   .contacts__content
+      max-width: 686px
+   .cont .contacts__content
+      margin-top: 0
+   .layouts .pay__fig
+      top: 17px
+   .layouts .lay__row
+      margin-top: 18px
+   .lay-pay #tab3 .lay-pay__pic
+      max-width: 42%
+   .calc__per img
+      width: 350px
+   .calc__per
+      min-height: 400px
 @media screen and (max-width: 1340px)
    .container
       max-width: 1200px !important
@@ -38,6 +410,55 @@
       max-width: 550px
    .lay-pay #tab3 .pay__content
       max-width: 650px
+@media screen and (max-width: 1500px)
+   .lay .pay__fig 
+      top: 129px
+   .cont .contacts__content
+      margin-top: 0
+   .layouts .pay__fig
+      top: 17px
+   .layouts .lay__row
+      margin-top: 18px
+   .news__item
+      width: 32.2%
+   .doc__item
+      width: 32.1%
+@media screen and (max-width: 1400px)
+   .pay__pic
+      width: 48%
+   .pay__content 
+      max-width: 46%
+   .news__item
+      width: 32.1%
+   .policy__content 
+      max-width: 57%
+   .container
+      padding: 0 15px
+   
+   .news-form__wrap
+      max-width: 37%
+   .news__form button
+      width: 100%
+      margin-top: 18px
+
+   .container
+      max-width: 1200px !important
+   .section h1
+      font-size: 59px
+   .lay-pay__pic
+      max-width: 45.4%
+   .another .layouts-item__num
+      font-size: 19px
+   .another__item
+      padding: 24px 12px
+   .lay-pay #tab3 .pay__content
+      max-width: 56%
+   .calc__top p
+      font-size: 30px
+   .cont h1
+      font-size: 100px
+   .news-form__wrap
+      padding: 53px 35px 51px
 @media screen and (max-width: 1199px)
    .container
       max-width: 960px !important
@@ -104,8 +525,9 @@
       max-width: 49%
    .contacts__row_1
       margin-bottom: 267px
-   .contacts__bg
-      top: 21px
+   .contacts__bg 
+      top: 182px
+      right: 5px
    .news-form__title
       font-size: 32px
       line-height: 40px
@@ -351,6 +773,40 @@
       max-width: 100%
    .calc__area
       max-width: 100%
+   .pay .tabs__nav
+      width: 100%
+      margin-bottom: 40px
+   .pay .tabs__pane:nth-child(3)
+      margin-top: 0
+   .pay__text
+      max-width: 100%
+   .nav__logo 
+      margin-right: 30px
+      width: 160px
+   .nav__list li
+      margin-right: 30px
+   h1 
+      font-size: 100px
+      line-height: 120%
+   .layouts .lay__row
+      margin-top: 0
+@media ( max-width: 1250px )
+   .contacts__bg
+      margin-right: 0
+   .contacts h2
+      font-size: 80px
+      margin-bottom: 34px
+   .contacts__content
+      margin-left: 0
+   .contacts__box
+      justify-content: space-between
+   .contacts__content
+      margin-top: 0
+   .news__item
+      width: 32%
+@media ( max-width: 1200px )
+   .news__item
+      width: 48%
 @media ( max-width: 991px )
    .contacts__content
       max-width: 100%
@@ -1259,6 +1715,47 @@
       display: none
    .tabs__nav, .another__area, .calc__flex
       overflow-y: hidden
+   .main .swiper1 .swiper-slide a p
+      font-size: 16px
+      line-height: 18px
+      order: 2
+      margin: 20px
+      display: flex
+      align-items: center
+      width: 100%
+      max-width: 89%
+      justify-content: space-between
+      &:after 
+         content: ""
+         display: inline-flex
+         background: url(/img/go.svg) no-repeat center center
+         width: 9px
+         height: 13px
+   .main__fig
+      bottom: inherit
+      top: 51px
+   .main .swiper1 .swiper-slide a img
+      position: relative
+      order: 1
+      z-index: 1
+   .main .swiper1 .swiper-slide a
+      padding: 0px 0 76px
+      height: 418px
+      background: rgb(32, 66, 39)
+      border: none
+   #pay 
+      .tabs__nav
+         a 
+            width: 33%
+            padding: 0
+   .pay .tabs__pane:nth-child(3) .pay__banks
+      margin-bottom: -7px
+   .header__wrap
+      z-index: 1
+
+
+   .lay .pay__fig
+      top: 0
 @media screen and (max-width: 400px)
    .info__area
       top: 241px
