--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -349,32 +349,32 @@ section {
 
 @font-face {
   font-family: 'Gilroy';
-  src: url("/fonts/Gilroy-Medium.eot");
-  src: url("/fonts/Gilroy-Medium.eot?#iefix") format("embedded-opentype"), url("/fonts/Gilroy-Medium.woff2") format("woff2"), url("/fonts/Gilroy-Medium.woff") format("woff"), url("/fonts/Gilroy-Medium.ttf") format("truetype"), url("/fonts/Gilroy-Medium.svg#Gilroy-Medium") format("svg");
+  src: url("../fonts/Gilroy-Medium.eot");
+  src: url("../fonts/Gilroy-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/Gilroy-Medium.woff2") format("woff2"), url("../fonts/Gilroy-Medium.woff") format("woff"), url("../fonts/Gilroy-Medium.ttf") format("truetype"), url("../fonts/Gilroy-Medium.svg#Gilroy-Medium") format("svg");
   font-weight: 500;
   font-style: normal;
   font-display: swap; }
 
 @font-face {
   font-family: 'Gilroy';
-  src: url("/fonts/Gilroy-Bold.eot");
-  src: url("/fonts/Gilroy-Bold.eot?#iefix") format("embedded-opentype"), url("/fonts/Gilroy-Bold.woff2") format("woff2"), url("/fonts/Gilroy-Bold.woff") format("woff"), url("/fonts/Gilroy-Bold.ttf") format("truetype"), url("/fonts/Gilroy-Bold.svg#Gilroy-Bold") format("svg");
+  src: url("../fonts/Gilroy-Bold.eot");
+  src: url("../fonts/Gilroy-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Gilroy-Bold.woff2") format("woff2"), url("../fonts/Gilroy-Bold.woff") format("woff"), url("../fonts/Gilroy-Bold.ttf") format("truetype"), url("../fonts/Gilroy-Bold.svg#Gilroy-Bold") format("svg");
   font-weight: bold;
   font-style: normal;
   font-display: swap; }
 
 @font-face {
   font-family: 'Gilroy';
-  src: url("/fonts/Gilroy-Regular.eot");
-  src: url("/fonts/Gilroy-Regular.eot?#iefix") format("embedded-opentype"), url("/fonts/Gilroy-Regular.woff2") format("woff2"), url("/fonts/Gilroy-Regular.woff") format("woff"), url("/fonts/Gilroy-Regular.ttf") format("truetype"), url("/fonts/Gilroy-Regular.svg#Gilroy-Regular") format("svg");
+  src: url("../fonts/Gilroy-Regular.eot");
+  src: url("../fonts/Gilroy-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Gilroy-Regular.woff2") format("woff2"), url("../fonts/Gilroy-Regular.woff") format("woff"), url("../fonts/Gilroy-Regular.ttf") format("truetype"), url("../fonts/Gilroy-Regular.svg#Gilroy-Regular") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: swap; }
 
 @font-face {
   font-family: 'SangBleu Sunrise';
-  src: url("/fonts/SangBleuSunrise-Light.eot");
-  src: url("/fonts/SangBleuSunrise-Light.eot?#iefix") format("embedded-opentype"), url("/fonts/SangBleuSunrise-Light.woff2") format("woff2"), url("/fonts/SangBleuSunrise-Light.woff") format("woff"), url("/fonts/SangBleuSunrise-Light.ttf") format("truetype"), url("/fonts/SangBleuSunrise-Light.svg#SangBleuSunrise-Light") format("svg");
+  src: url("../fonts/SangBleuSunrise-Light.eot");
+  src: url("../fonts/SangBleuSunrise-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/SangBleuSunrise-Light.woff2") format("woff2"), url("../fonts/SangBleuSunrise-Light.woff") format("woff"), url("../fonts/SangBleuSunrise-Light.ttf") format("truetype"), url("../fonts/SangBleuSunrise-Light.svg#SangBleuSunrise-Light") format("svg");
   font-weight: 300;
   font-style: normal;
   font-display: swap; }
