--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -410,7 +410,161 @@
       max-width: 550px
    .lay-pay #tab3 .pay__content
       max-width: 650px
-@media screen and (max-width: 1500px)
+@media screen and (max-width: 1799px)
+   .plan__items a
+      width: 140px
+      height: 140px
+   .plan .plan__item_1 
+      bottom: 170px
+      right: 659px
+   .plan .plan__item_2
+      bottom: 206px
+      right: 785px
+   .plan .plan__item_3
+      bottom: 273px
+      right: 964px
+   .plan .plan__item_4
+      bottom: 298px
+      right: 1106px
+      width: 71px
+      height: 113px
+   .plan .plan__item_5
+      bottom: 325px
+      right: 1184px
+      width: 71px
+      height: 113px
+   .plan .plan__item_6
+      bottom: 344px
+      right: 1268px
+      width: 71px
+      height: 113px
+   .plan .plan__item_7
+      bottom: 366px
+      right: 1335px
+      width: 71px
+      height: 113px
+   .plan .plan__item_8
+      bottom: 384px
+      right: 1402px
+      width: 71px
+      height: 113px
+   .plan .plan__item_9
+      bottom: 404px
+      right: 1478px
+      width: 71px
+      height: 113px
+   .plan .plan__item_10
+      bottom: 428px
+      right: 1540px
+      width: 71px
+      height: 113px
+@media screen and (max-width: 1699px)
+   .plan__items a
+      width: 100px
+      height: 100px
+   .plan .plan__item_1 
+      bottom: 170px
+      right: 638px
+   .plan .plan__item_2
+      bottom: 206px
+      right: 755px
+   .plan .plan__item_3
+      bottom: 273px
+      right: 934px
+   .plan .plan__item_4
+      bottom: 276px
+      right: 1040px
+      width: 71px
+      height: 113px
+   .plan .plan__item_5
+      bottom: 306px
+      right: 1110px
+      width: 71px
+      height: 113px
+   .plan .plan__item_6
+      bottom: 327px
+      right: 1186px
+      width: 71px
+      height: 113px
+   .plan .plan__item_7
+      bottom: 342px
+      right: 1255px
+      width: 71px
+      height: 113px
+   .plan .plan__item_8
+      bottom: 357px
+      right: 1329px
+      width: 71px
+      height: 113px
+   .plan .plan__item_9
+      bottom: 387px
+      right: 1386px
+      width: 71px
+      height: 113px
+   .plan .plan__item_10
+      bottom: 405px
+      right: 1456px
+      width: 71px
+      height: 113px
+   .plan__bg_3 
+      left: 300px
+      bottom: 0px
+      width: 700px
+   .plan__bg_2
+      width: 378px
+   .plan__bg_1
+      left: 0px
+      bottom: 0
+      width: 600px
+@media screen and (max-width: 1599px)
+   .plan__items a
+      width: 100px
+      height: 100px
+   .plan .plan__item_1 
+      bottom: 156px
+      right: 603px
+   .plan .plan__item_2
+      bottom: 189px
+      right: 708px
+   .plan .plan__item_3
+      bottom: 247px
+      right: 872px
+   .plan .plan__item_4
+      bottom: 256px
+      right: 975px
+      width: 71px
+      height: 113px
+   .plan .plan__item_5
+      bottom: 280px
+      right: 1042px
+      width: 71px
+      height: 113px
+   .plan .plan__item_6
+      bottom: 294px
+      right: 1114px
+      width: 71px
+      height: 113px
+   .plan .plan__item_7
+      bottom: 315px
+      right: 1180px
+      width: 71px
+      height: 113px
+   .plan .plan__item_8
+      bottom: 338px
+      right: 1240px
+      width: 71px
+      height: 113px
+   .plan .plan__item_9
+      bottom: 350px
+      right: 1299px
+      width: 71px
+      height: 113px
+   .plan .plan__item_10
+      bottom: 385px
+      right: 1361px
+      width: 71px
+      height: 113px
+@media screen and (max-width: 1499px)
    .lay .pay__fig 
       top: 129px
    .cont .contacts__content
@@ -423,7 +577,69 @@
       width: 32.2%
    .doc__item
       width: 32.1%
-@media screen and (max-width: 1400px)
+   .plan .plan__item_1 
+      bottom: 145px
+      right: 550px
+      width: 100px
+      height: 100px
+   .plan .plan__item_2
+      bottom: 176px
+      right: 653px
+      width: 100px
+      height: 100px
+   .plan .plan__item_3
+      bottom: 225px
+      right: 809px
+      width: 100px
+      height: 100px
+   .plan .plan__item_4
+      bottom: 245px
+      right: 905px
+      width: 65px
+      height: 100px
+   .plan .plan__item_5
+      bottom: 268px
+      right: 975px
+      width: 65px
+      height: 100px
+   .plan .plan__item_6
+      bottom: 283px
+      right: 1041px
+      width: 65px
+      height: 100px
+   .plan .plan__item_7
+      bottom: 298px
+      right: 1100px
+      width: 65px
+      height: 100px
+   .plan .plan__item_8
+      bottom: 312px
+      right: 1164px
+      width: 65px
+      height: 100px
+   .plan .plan__item_9
+      bottom: 337px
+      right: 1209px
+      width: 65px
+      height: 100px
+   .plan .plan__item_10
+      bottom: 355px
+      right: 1275px
+      width: 65px
+      height: 100px
+   .plan__bg_6
+      width: 500px
+   .plan__bg_5
+      width: 800px
+   .plan__bg_2
+      width: 350px
+   .plan__bg_1
+      width: 500px
+   .plan__bg_3 
+      left: 209px
+      bottom: 0px
+      width: 600px
+@media screen and (max-width: 1399px)
    .pay__pic
       width: 48%
    .pay__content 
@@ -459,7 +675,59 @@
       font-size: 100px
    .news-form__wrap
       padding: 53px 35px 51px
+   .plan .plan__item_1 
+      bottom: 134px
+      right: 503px
+      width: 100px
+      height: 100px
+   .plan .plan__item_2
+      bottom: 165px
+      right: 599px
+      width: 100px
+      height: 100px
+   .plan .plan__item_3
+      bottom: 225px
+      right: 750px
+      width: 100px
+      height: 100px
+   .plan .plan__item_4
+      bottom: 231px
+      right: 835px
+      width: 65px
+      height: 100px
+   .plan .plan__item_5
+      bottom: 254px
+      right: 894px
+      width: 65px
+      height: 100px
+   .plan .plan__item_6
+      bottom: 264px
+      right: 958px
+      width: 65px
+      height: 100px
+   .plan .plan__item_7
+      bottom: 278px
+      right: 1015px
+      width: 65px
+      height: 100px
+   .plan .plan__item_8
+      bottom: 287px
+      right: 1072px
+      width: 65px
+      height: 100px
+   .plan .plan__item_9
+      bottom: 305px
+      right: 1123px
+      width: 65px
+      height: 100px
+   .plan .plan__item_10
+      bottom: 326px
+      right: 1181px
+      width: 65px
+      height: 100px
 @media screen and (max-width: 1199px)
+   .plan__bg
+      display: none
    .container
       max-width: 960px !important
    .footer__box
