--- a/src/sass/content.sass
+++ b/src/sass/content.sass
@@ -1899,6 +1899,28 @@ input.error
 .plan 
    padding: 128px 0 0
    background: url(/img/plan.png) no-repeat center center / cover
+   position: relative
+   &__bg 
+      position: absolute
+      z-index: 1
+      &_1
+         left: 0
+         bottom: 0
+      &_2
+         left: 0
+         bottom: 191px
+      &_3
+         left: 400px
+         bottom: 0
+      &_4
+         right: 0px
+         top: 0px
+      &_5
+         right: 150px
+         top: 0px
+      &_6
+         right: 0px
+         top: 50px
    h2 
       margin-bottom: 64px
       color: rgb(43, 87, 52)
@@ -1909,7 +1931,7 @@ input.error
       width: 100%
       background: rgba(43, 87, 52, 0.1)
       position: relative
-      height: 700px
+      overflow: hidden
       p 
          position: absolute
          top: 50%
@@ -1919,6 +1941,185 @@ input.error
          font-weight: 600
          line-height: 18px
          margin-left: -46px
+   &__main 
+      width: 100%
+      height: auto
+      object-fit: cover
+   &__items 
+      a 
+         display: flex
+         align-items: center
+         justify-content: center
+         width: 150px
+         height: 150px
+         position: absolute
+         z-index: 2
+         transition: 0.5s
+         img 
+            transition: 0.5s
+            opacity: 0
+            mix-blend-mode: darken
+         &:hover 
+            img 
+               opacity: 1
+   .plan__item
+      &_1 
+         bottom: 184px
+         right: 750px
+      &_2
+         bottom: 245px
+         right: 887px
+      &_3
+         bottom: 306px
+         right: 1094px
+      &_4
+         bottom: 346px
+         transform: rotate(28deg)
+         right: 1241px
+         width: 92px
+         height: 115px
+      &_5
+         bottom: 376px
+         transform: rotate(28deg)
+         right: 1329px
+         width: 92px
+         height: 115px
+      &_6
+         bottom: 403px
+         transform: rotate(28deg)
+         right: 1417px
+         width: 92px
+         height: 115px
+      &_7
+         bottom: 424px
+         transform: rotate(37deg)
+         right: 1502px
+         width: 92px
+         height: 115px
+      &_8
+         bottom: 443px
+         transform: rotate(37deg)
+         right: 1587px
+         width: 92px
+         height: 115px
+      &_9
+         bottom: 468px
+         transform: rotate(37deg)
+         right: 1667px
+         width: 92px
+         height: 115px
+      &_10
+         bottom: 508px
+         transform: rotate(37deg)
+         right: 1745px
+         width: 92px
+         height: 115px
+   &__pic 
+      position: absolute
+      top: 0
+      left: 0
+      width: 100%
+      height: auto
+      object-fit: cover
+      transition: 0.5s
+      opacity: 0
+      &.active 
+         opacity: 1
+.item1 
+   &__title
+      font-size: 35px
+      line-height: 51px
+      letter-spacing: -0.03em
+      font-feature-settings: 'pnum' on, 'onum' on
+      color: #F0EBE6
+      font-weight: bold 
+      margin-bottom: 20px
+      font-family: 'SangBleu Sunrise'
+   &__sum
+      font-weight: 500
+      font-size: 37.0633px
+      line-height: 43px
+      font-feature-settings: 'pnum' on, 'onum' on
+      color: #F0EBE6
+      margin-bottom: 15px
+   &__info 
+      font-weight: 400
+      margin-bottom: 15px
+      font-size: 16px
+      display: flex
+      align-items: center
+      line-height: 18px
+      font-feature-settings: 'pnum' on, 'onum' on
+      color: rgba(240, 235, 230, 0.6)
+      p
+         font-weight: 400
+         font-size: 16px
+         line-height: 18px
+         font-feature-settings: 'pnum' on, 'onum' on
+         color: rgba(240, 235, 230, 0.6)
+         margin-right: 7px
+      span 
+         border-bottom: 1px solid white
+         font-size: 16px
+         line-height: 18px
+         font-feature-settings: 'pnum' on, 'onum' on
+         color: #FFFFFF
+         margin-left: 7px
+   &__row 
+      align-items: center
+      margin-top: 25px
+      p 
+         font-weight: 600
+         font-size: 16px
+         line-height: 18px
+         font-feature-settings: 'pnum' on, 'onum' on
+         color: #FFFFFF
+         display: flex
+         align-items: center
+         &:after 
+            content: ""
+            display: inline-flex
+            border-radius: 50% 
+            width: 6px
+            height: 6px
+            margin: 0 15px
+            background: rgba(255, 255, 255, 0.2)
+         &:last-child
+            &:after 
+               display: none
+.itt
+   .popup-call__box
+      width: 380px
+      margin-left: -190px
+      padding: 20px
+      height: auto
+      background: #2B5734
+      border: 1px solid rgba(240, 235, 230, 0.3)
+      .popup__wrap 
+         background: transparent
+         padding: 0
+      .swip 
+         height: 210px
+         overflow: hidden
+         .swiper-slide 
+            height: 100%
+            img
+               width: 100%
+               height: 100%
+               object-fit: cover
+   .pag 
+      justify-content: center
+      margin: 20px auto 
+      .swiper-pagination-bullet
+         width: 26px
+         height: 3px
+         background: #FFFFFF
+         opacity: 0.3
+         border-radius: 21px
+         margin: 0 2px !important
+      .swiper-pagination-bullet-active
+         background: white !important
+         opacity: 1
 .tab-content
    display: none 
 .tab-content.active
